--- a/sass/_list.scss
+++ b/sass/_list.scss
@@ -4,17 +4,26 @@
   max-width: 54rem;
   display: flex;
   flex-direction: column;
+
+  @media only screen and (max-width: 37.5em) {
+    margin: 3rem;
+    margin-top: 7rem;
+  }
+  @media only screen and (max-width: 25em) {
+    margin: 2rem;
+    margin-top: 5rem;
+  }
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 5rem;
+  margin-bottom: 4.5rem;
 
   &__logo {
     text-transform: uppercase;
-    color: white;
+    color: var(--color-white);
     letter-spacing: 1rem;
     line-height: 1;
   }
@@ -23,64 +32,232 @@
     position: relative;
     width: 2.6rem;
     height: 2.6rem;
+    cursor: pointer;
+
+    @media only screen and (max-width: 37.5em) {
+      width: 2.4rem;
+      height: 2.4rem;
+    }
   }
 
   &__switch-night,
   &__switch-day {
     position: absolute;
-    width: 2.6rem;
-    height: 2.6rem;
+    width: 100%;
+    height: 100%;
   }
 }
 
 .todo {
   &__new {
     width: 100%;
-    background-color: white;
+    background-color: var(--color-theme);
     display: flex;
+    align-items: center;
     padding: 2rem;
-    border-radius: 0.5rem;
-    margin-bottom: 2rem;
-    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.2);
+    border-radius: var(--border-radius-main);
+    margin-bottom: 2.4rem;
+    box-shadow: var(--box-shadow-main);
+
+    @media only screen and (max-width: 37.5em) {
+      padding: 1.6rem 2rem;
+    }
+  }
+
+  &__input {
+    font-size: inherit;
+    font-family: inherit;
+    outline: none;
+    border: none;
+    width: 90%;
+    caret-color: var(--color-primary-blue);
   }
 
   &__list {
-    background-color: white;
-    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.2);
+    background-color: var(--color-theme);
+    border-radius: var(--border-radius-main);
+    box-shadow: var(--box-shadow-main);
+    padding-bottom: 4.7rem;
+    margin-bottom: -4.7rem;
   }
 }
 
 .item {
   display: flex;
   align-items: center;
-  padding: 2rem;
-  border-bottom: 1px solid black;
+  padding: 2rem 2.4rem;
+  border-bottom: 1px solid var(--color-lines);
+
+  @media only screen and (max-width: 37.5em) {
+    padding: 1.6rem 2rem;
+  }
+
   &__checkbox {
-    height: 2rem;
-    width: 2rem;
-    border: 1px solid grey;
+    height: 2.4rem;
+    width: 2.4rem;
+    border: 1px solid var(--color-lines);
     border-radius: 50%;
-    margin-right: 2rem;
+    margin-right: 2.4rem;
+    position: relative;
+
+    @media only screen and (max-width: 37.5em) {
+      height: 2rem;
+      width: 2rem;
+      margin-right: 1.2rem;
+    }
+
+    &--done {
+      border: unset;
+      background-image: url(../images/icon-check.svg), var(--gradient-checkbox);
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 2.2rem;
+      height: 2.2rem;
+      background-color: var(--color-white);
+      border-radius: 50%;
+      top: 0.1rem;
+      left: 0.1rem;
+      display: none;
+
+      @media only screen and (max-width: 37.5em) {
+        width: 1.8rem;
+        height: 1.8rem;
+      }
+    }
   }
 
   &__text {
+    color: var(--color-todo-text);
+
+    &--done {
+      text-decoration: line-through;
+      color: var(--color-todo-completed);
+    }
+  }
+
+  & > &__checkbox:hover {
+    background-image: var(--gradient-checkbox);
+    background-position: center;
+    background-repeat: no-repeat;
+    border: unset;
+    &::before {
+      display: unset;
+    }
+  }
+
+  &__delete {
+    margin-left: auto;
+    display: none;
+    width: 1.8rem;
+    @media only screen and (max-width: 75em) {
+      display: block;
+    }
+    @media only screen and (max-width: 37.5em) {
+      width: 1.2rem;
+    }
+  }
+  &:hover &__delete {
+    display: block;
+  }
+
+  & > * {
+    cursor: pointer;
   }
 }
 
 .controls {
   display: grid;
   grid-template-areas: "items select clear";
+  border-bottom-right-radius: var(--border-radius-main);
+  border-bottom-left-radius: var(--border-radius-main);
+  color: var(--color-controls-text);
+  padding: 1.6rem 2.4rem;
+  font-size: 1.4rem;
+
+  @media only screen and (max-width: 37.5em) {
+    grid-template-areas:
+      "items . clear"
+      "select select select";
+  }
+
+  &__items-left {
+    grid-area: items;
+  }
+  &__selectors {
+    grid-area: select;
+    justify-self: end;
+    font-weight: 600;
+
+    @media only screen and (max-width: 37.5em) {
+      box-shadow: var(--box-shadow-main);
+      margin-top: 3.5rem;
+      background-color: var(--color-theme);
+      width: calc(100% + 2 * 2.4rem);
+      padding: 1.6rem;
+      justify-self: center;
+      border-radius: var(--border-radius-main);
+      display: flex;
+      justify-content: center;
+    }
+
+    span {
+      cursor: pointer;
+
+      &:not(:last-child) {
+        margin-right: 1.5rem;
+      }
+      &:hover {
+        color: var(--color-controls-hover);
+      }
+    }
+  }
+  &__clear {
+    grid-area: clear;
+    justify-self: end;
+    cursor: pointer;
+
+    &:hover {
+      color: var(--color-controls-hover);
+    }
+  }
+}
+
+.selector--current {
+  color: var(--color-primary-blue);
+}
+
+.text-drag-drop {
+  margin: auto;
+  margin-top: 5rem;
+  font-size: 1.4rem;
+  color: var(--color-controls-text);
+
+  @media only screen and (max-width: 37.5em) {
+    margin-top: 3.5rem;
+  }
 }
 
 .attribution {
   width: 30rem;
   text-align: center;
   margin: auto;
-  margin-top: 50rem;
+  margin-top: 10rem;
+  color: var(--color-controls-text);
+  font-size: 1.5rem;
 
   a:link,
   a:visited {
     text-decoration: none;
+    color: inherit;
+  }
+  a:hover,
+  a:active {
+    color: var(--color-controls-hover);
   }
 }
 
