--- a/sass/_list.scss
+++ b/sass/_list.scss
@@ -95,13 +95,8 @@
   padding: 2rem 2.4rem;
   border-bottom: 1px solid var(--color-lines);
   background-color: var(--color-theme);
-  width: 54rem;
-  z-index: 3;
 
-  @media only screen and (max-width: 37.5em) {
-    padding: 1.6rem 2rem;
-    width: unset;
-  }
+  z-index: 3;
 
   &__checkbox {
     height: 2.4rem;
@@ -278,6 +273,16 @@
 
 .draggable {
   user-select: none;
+}
+
+.dragging {
+  width: 54rem;
+  @media only screen and (max-width: 37.5em) {
+    width: calc(100% - 6rem);
+  }
+  @media only screen and (max-width: 25em) {
+    width: calc(100% - 4rem);
+  }
 }
 
 .placeholder {
